tests/derivation/core/norec nodep noext 003-neg/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: No constructors found for the type `Builtin.Void`

DerivedGen:1
 12 | XShow : Show X
 13 | XShow = %runElab derive
 14 | 
 15 | checkedGen : Fuel -> Gen MaybeEmpty X
 16 | checkedGen = deriveGen
                   ^^^^^^^^^

